--- a/style.css
+++ b/style.css
@@ -1,13 +1,21 @@
 html{
 	margin: 0;
 	padding: 0;
-    font-family: sans-serif; 
+	font-family: sans-serif;
 }
 
 body{
 	background: url(background.jpg) no-repeat center center fixed;
 	background-size: cover; 
-	    
+}
+
+div{
+	width: 90%;
+	height: 1200px;
+	margin: 0 auto;
+	padding: 12px;
+	border: 1px solid white;
+	background: rgba(255,255,255,0,1); 
 }
 
 h1{
@@ -19,5 +27,23 @@ p{
 }
 
 img{
+	width: 100%;
+	max-width:100%;
 
-}	
+}
+
+.article1{
+
+}
+
+.article2{
+
+}
+
+.article3{
+
+}
+
+section{
+
+}
