--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body{
 
 #main{
 	width: 90%;
-	height: 1200px;
+	height: 100%;
 	margin: 0 auto;
 	padding: 12px;
 	background: rgba(255,255,255,0,1); 
