--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 html{
 	margin: 0;
 	padding: 0;
-	font-family: sans-serif;
+	font-family: 'Barlow', sans-serif;
 }
 
 body{
@@ -21,6 +21,9 @@ h1{
 	color:#D9B341;
 	text-transform: uppercase;
 	font-size: 32px;
+}
+
+h2{
 
 }
 
