--- a/style.css
+++ b/style.css
@@ -5,8 +5,8 @@ html{
 }
 
 body{
-	background: url(background.jpg) no-repeat center center fixed;
-	background-size: cover; 
+	/*background: url(background.jpg) no-repeat center center fixed;
+	background-size: cover;*/ 
 }
 
 #main{
@@ -24,17 +24,19 @@ h1{
 }
 
 h2{
-
+	color: teal;
+    font-size: 24px;
 }
 
 p{
 	color: #3743FF;
-
+    font-size: 16px;
 }
 
 img{
 	width: 100%;
 	max-width:100%;
+	border-radius: 50%
 }
 
 .tagline{
